--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
+    "@awarns/core": "^1.1.0",
+    "@awarns/geofencing": "^1.1.0",
+    "@awarns/geolocation": "^1.0.0",
+    "@awarns/human-activity": "^1.0.0",
+    "@awarns/notifications": "^1.0.2",
+    "@awarns/persistence": "^1.1.1",
     "@nativescript/angular": "^16.0.0",
     "@nativescript/core": "~8.6.0",
     "@nativescript/theme": "~3.0.2",
+    "nativescript-task-dispatcher": "^3.1.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
+    "@nativescript/android": "8.6.2",
     "@nativescript/types": "~8.6.0",
     "@nativescript/webpack": "~5.0.18",
     "@ngtools/webpack": "~16.2.0",
